crates/fluvio-connector-derive/tests/ui/config_input_self.rs
use fluvio_connector_derive::connector;

#[connector(source)]
async fn start_fn(self, producer: ()) {}
